--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DisplayFragment_Using_XML_Android_Github</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="text_follow">Thank You and Keep Supporting </string>
+    <string name="text_github">amansharma-dev</string>
 </resources>
